Added figures for the UI, plus minor changes

--- a/installation.tex
+++ b/installation.tex
@@ -1,6 +1,7 @@
 \chapter{Installation}
 The software does not require any installation, you can simply download it
 and unzip in a folder of your choice. 
+You can skip this chapter if you have no need of compiling from sources
 
 \section{Compiling from sources}
 
@@ -11,16 +12,17 @@ in a mostly automated way.
 Under Windows, the code has been developed and compiled under MSYS2, which
 is a software distro and building platform for Windows. What that means is
 you have a linux-like shell environment and package manager, with a
-mingw64-based compiler toolchain. The generated executables will run
+\texttt{mingw64}-based compiler toolchain. The generated executables will run
 on any 64-bit Windows machine, provided you bundle a few \texttt{dll} files.
 
 \subsection{Building instructions}
 Both the software and its dependencies are written in \CC{} and use CMAKE as a
-build system. You can simply [git clone] all the dependencies, cmake install
+build system. You can simply \texttt{git clone} all the dependencies, cmake install
 them and be good to go.
+
 However, if you want a more guided way of building everything from scratch,
 you can start by cloning a repository that contains a series of scripts to help
-you in the process: [git cmake\_scripts]. Those will download and build
+you in the process. Those will download and build
 all the parts with the needed cmake flags, using a temporary build folder
 so that your system root does not get polluted with any cmake install used
 in the process.
@@ -45,7 +47,7 @@ You will also need some development libraries. For Debian-based linux, the list 
 \end{itemize}
 Please note that the dependency names might be slightly different depending on your distribution.
 
-The list of operations is as follows:
+To guided compilations via provided scripts, the list of operations is as follows:
 \begin{itemize}
     \item \texttt{git clone http://github.com/francesco\_cattoglio/cmake\_scripts.git}
     \item run the \texttt{./cmake\_scripts/all\_git\_downloads.sh} script
