--- a/user_manual.tex
+++ b/user_manual.tex
@@ -6,6 +6,8 @@
 \usepackage{fullpage}
 \usepackage{color}
 \usepackage{colortbl}
+\usepackage{graphicx}
+\usepackage{float}
 
 \usepackage{relsize}
 %\hyphenation{}
